--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -100,7 +100,7 @@
     h5,
     h6 {
       font-weight: bold;
-      margin: 1.2rem 0;
+      margin: 0.75rem 0;
 
       [theme=dark] & {
         font-weight: bolder;
@@ -129,7 +129,7 @@
     }
 
     p {
-      margin: 0 0 1rem 0;
+      margin: 0.5rem 0 0.5rem 0;
     }
 
     b, strong {
